--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -76,5 +76,15 @@
       "lastEditTimeRange": "最后更新时间范围",
       "minLikes": "最少赞"
     }
+  },
+  "article": {
+    "loading": "加载中",
+    "dateFormat": "YYYY/M/D HH:mm:ss",
+    "tags": "标签",
+    "createTime": "创建日期",
+    "lastEditedTime": "最近更新日期",
+    "likeCount": "喜欢数",
+    "commentCount": "评论数",
+    "author": "作者"
   }
 }
