Article display complete

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -85,6 +85,7 @@
     "lastEditedTime": "最近更新日期",
     "likeCount": "喜欢数",
     "commentCount": "评论数",
-    "author": "作者"
+    "author": "作者",
+    "backToTop": "回到顶部"
   }
 }
