--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,6 +85,7 @@
     "lastEditedTime": "Last edited time",
     "likeCount": "Likes",
     "commentCount": "Comments",
-    "author": "Author"
+    "author": "Author",
+    "backToTop": "Back to top"
   }
 }
