--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -86,6 +86,7 @@
     "likeCount": "喜欢数",
     "commentCount": "评论数",
     "author": "作者",
-    "backToTop": "回到顶部"
+    "backToTop": "回到顶部",
+    "toc": "目录"
   }
 }
