--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -86,6 +86,7 @@
     "likeCount": "Likes",
     "commentCount": "Comments",
     "author": "Author",
-    "backToTop": "Back to top"
+    "backToTop": "Back to top",
+    "toc": "Table of Contents"
   }
 }
