--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,6 +19,7 @@
     "dateFormat": "YYYY/M/D HH:mm:ss ZZ"
   },
   "loginModal": {
+    "loading": "Loading",
     "title": "Login",
     "username": "Username",
     "password": "Password",
