--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -12,6 +12,15 @@
       "logout": "登出"
     }
   },
+  "profile": {
+    "selfIntro": {
+      "title": "关于我",
+      "description":"我是一个啥啥啥"
+    },
+    "contact": {
+      "title": "联系我"
+    }
+  },
   "footer": {
     "codeProudlyByVicCrubs": "由 {viccrubs} 强力编写",
     "comma": "，",
