--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -94,12 +94,10 @@
     "dateFormat": "YYYY[年]M[月]D[日] HH:mm:ss ZZ",
     "pageIndicator": "共{count}篇文章",
     "filterAndSort": {
+      "order": "排序",
       "title": "筛选和排序",
-      "textsInTitle": "标题包含文字",
+      "textsInTitle": "标题包含文字，按下Enter执行搜索",
       "tags": "标签",
-      "createTimeRange": "创建时间范围",
-      "lastEditTimeRange": "最后更新时间范围",
-      "minLikes": "最少赞",
       "update":"更新",
       "clear":"清空"
     },
