--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,16 @@
 {
   "homepage": {
-    "documentTitle" :"Home - VicBlog"
+    "documentTitle" :"Home - VicBlog",
+    "recentArticles": {
+      "title": "Recent Articles",
+      "refresh": "Refresh",
+      "retry": "Retry",
+      "fetching": "Fetching",
+      "seeMore": "See more"
+    }
+  },
+  "contentPanel": {
+
   },
   "header": {
     "home": "Home",
