--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,10 @@
       "seeMore": "See more"
     }
   },
+  "about": {
+    "aboutMe": "About me",
+    "aboutProject": "About the website"
+  },
   "contentPanel": {
 
   },
