--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -39,7 +39,7 @@
   "profile": {
     "selfIntro": {
       "title": "关于我",
-      "description":"我是一个啥啥啥"
+      "description":"软件工程本科生。爱玩游戏。"
     },
     "contact": {
       "title": "联系我"
